--- a/res/layout/activity_home.xml
+++ b/res/layout/activity_home.xml
@@ -44,7 +44,8 @@
         android:id="@+id/tableRow1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center" >
+        android:gravity="center"
+        android:paddingTop="15dp" >
 
         <Button
             android:id="@+id/homeShowMapButton"
