--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -56,7 +56,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:ems="10" >
+            android:ems="10"
+            android:inputType="textPassword" >
 
             <requestFocus />
         </EditText>
