--- a/res/layout/activity_register.xml
+++ b/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity" >
+    tools:context=".RegisterActivity" >
 
     <LinearLayout
         android:layout_width="wrap_content"
