Slight UI Changes and Register Activity Linking

--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -28,7 +28,7 @@
             android:id="@+id/textView2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Andrew id: "
+            android:text="Andrew ID: "
             android:textAppearance="?android:attr/textAppearanceSmall" />
 
         <EditText
