--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -10,14 +10,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity" >
 
-    <TextView
-        android:id="@+id/IntroText"
-        android:layout_width="350dp"
-        android:layout_height="150dp"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/IntroString"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textStyle="italic" />
+    <TableRow
+        android:id="@+id/tableRow1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center|clip_horizontal" >
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="132dp"
+            android:layout_height="153dp"
+            android:layout_weight="0.20"
+            android:src="@drawable/scotty_dog" />
+
+    </TableRow>
 
     <TableRow
         android:id="@+id/andrewIdRow"
