--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -10,6 +10,25 @@
     tools:context=".ProfileActivity" >
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" >
+
+        <com.facebook.widget.ProfilePictureView
+            android:id="@+id/profilePicture"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
+        <TextView
+            android:id="@+id/textViewProfileName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.73"
+            android:paddingTop="40dp"
+            android:textSize="30sp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -23,36 +42,18 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal" >
 
-            <ImageView
-                android:id="@+id/imageViewProfilePhoto"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:background="@drawable/people" />
-
-            <TextView
-                android:id="@+id/textViewProfileName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" 
-                android:textSize="30sp"/>
-        </LinearLayout>
-        
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
-
             <TextView
                 android:id="@+id/textViewProfileLabelGender"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:text="Gender" 
-                android:textSize="15sp"/>
+                android:text="Gender"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/textViewProfileGender"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp" 
-                android:textSize="15sp"/>
+                android:layout_height="30dp"
+                android:textSize="15sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -64,14 +65,14 @@
                 android:id="@+id/textViewProfileLabelFacebookID"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:text="FacebookID" 
-                android:textSize="15sp"/>
+                android:text="FacebookID"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/textViewProfileFacebookID"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp" 
-                android:textSize="15sp"/>
+                android:layout_height="30dp"
+                android:textSize="15sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -83,41 +84,42 @@
                 android:id="@+id/textViewProfileLabelEmail"
                 android:layout_width="100dp"
                 android:layout_height="30dp"
-                android:text="Email" 
-                android:textSize="15sp"/>
+                android:text="Email"
+                android:textSize="15sp" />
 
             <TextView
                 android:id="@+id/textViewProfileEmail"
                 android:layout_width="wrap_content"
-                android:layout_height="30dp" 
-                android:textSize="15sp"/>
+                android:layout_height="30dp"
+                android:textSize="15sp" />
         </LinearLayout>
     </LinearLayout>
 
     <Button
         android:id="@+id/buttonVisitFacebook"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:text="Visit Facebook" />
 
-        <Button
+    <Button
         android:id="@+id/buttonSendFacebookMessage"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:text="Send Facebook Message" />
-        
-        <Button
+
+    <Button
         android:id="@+id/buttonShowOnMap"
-        android:paddingTop="@dimen/activity_vertical_margin"
-        android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
         android:text="Show on Map" />
+
 </LinearLayout>
